fixed the vertical alignment and the margin top, because needed a correction

--- a/src/less/miscellaneous/gravatar.less
+++ b/src/less/miscellaneous/gravatar.less
@@ -16,6 +16,6 @@
 // CSS
 // ---------------------------------------------------------------------------------------------------------------------
 .gravatar {
-  vertical-align: bottom;
-  //margin-top: -4px;
+  margin-top: -2px;
+  vertical-align: middle;
 }
